# Renderex

./: .gitignore  README.md  meson.build
src/: Main.cpp
src/Application/: Application.cpp  Application.h
src/Auxiliary/: Auxiliary.cpp  Auxiliary.h
src/Buffers/: BufferManager.cpp  BufferManager.h  ElementBuffer.cpp  ElementBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Model/: Model.cpp  Model.h  ModelManager.cpp  ModelManager.h
src/Shaders/: ShaderManager.cpp  ShaderManager.h
subprojects/: glew.wrap  glm.wrap
tests/: Setup.cpp  Setup.h
tests/Buffers/: ElementBufferTests.cpp  VertexBufferLayoutTests.cpp  VertexBufferTests.cpp
tests/Model/: ModelManagerTests.cpp
tests/Shaders/: ShaderManagerTests.cpp
